--- a/download/templates/download/code-form.html
+++ b/download/templates/download/code-form.html
@@ -1,8 +1,8 @@
 {% block body %}
 <h1>Type In Your Code</h1>
-<form action="" method="POST">
+<form action="{% url 'download_f' id %}" method="POST">
   {% csrf_token %}
-  {{ form }}
+  {{ form.as_p }}
   <input type="submit" value="Submit">
 </form>
 {% endblock %}
