--- a/core/templates/core/links.html
+++ b/core/templates/core/links.html
@@ -1,5 +1,9 @@
 {% extends 'common/master.html' %}
 {% block body %}
-<a href="{% url 'upload' %}">Upload</a>
-<a href="{% url 'download' %}">Download</a>
+    {% if user.is_authenticated %}
+        <a href="{% url 'upload' %}">Upload</a>
+        <a href="{% url 'requests_view' %}">View Requests</a>
+    {% endif %}
+    <a href="{% url 'download' %}">Download</a>
+    <a href="{% url 'request' %}">Request</a>
 {% endblock %}
