Add basic styling

--- a/download/templates/common/master.html
+++ b/download/templates/common/master.html
@@ -1,19 +1,19 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
   <head>
     <title>{% block title %}{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-      nav {
-        background-color: lightgrey;
-      }
-      a { padding: 12px; display: block; border: 1px solid black; }
-      nav > a { display: inline-block; }
-    </style>
+    <link href="{% static 'core/css/style.css' %}" rel="stylesheet">
+    {% if user.is_authenticated %}
+      <link href="{% static 'core/css/logged-in.css' %}" rel="stylesheet">
+    {% endif %}
   </head>
   <body>
-    {% include 'common/navbar.html' %}
-    {% block body %}
-    {% endblock %}
+    <div id="wrapper">
+      {% include 'common/navbar.html' %}
+      {% block body %}
+      {% endblock %}
+    </div>
   </body>
 </html>
