--- a/download/templates/download/code-form.html
+++ b/download/templates/download/code-form.html
@@ -1,3 +1,4 @@
+{% extends 'common/master.html' %}
 {% block body %}
 <h1>Type In Your Code</h1>
 <form action="{% url 'download_f' id %}" method="POST">
