--- a/core/templates/core/links.html
+++ b/core/templates/core/links.html
@@ -1,8 +1,31 @@
 {% extends 'common/master.html' %}
 {% block body %}
-    {% if user.is_authenticated %}
-        <a href="{% url 'upload' %}">Upload</a>
-        <a href="{% url 'requests_view' %}">View Downloads</a>
-    {% endif %}
-    <a href="{% url 'download' %}">Download</a>
+    <div class="two-col-grid">
+        <div>
+            <h1>Download a quote</h1>
+            <p>Download a quote from {{ company }}. Have it sent right to your inbox.</p>
+            <a href="{% url 'download' %}">Download a quote</a>
+        </div>
+        {% if user.is_authenticated %}
+            <div>
+                <h1>Upload quotes</h1>
+                <p>Upload quotes for {{ company }}. </p>
+                <a href="{% url 'upload' %}">Upload</a>
+            </div>
+            <div>
+                <h1>View Download Attempts</h1>
+                <p>View all download attempts, what IP the request originated from, what quote was requested, if the email was sent correctly and more!</p>
+                <a href="{% url 'requests_view' %}">View Downloads</a>
+            </div>
+        {% endif %}
+        <div>
+            {% if user.is_authenticated %}
+                <h1>Logout</h1>
+                <a href="{% url 'logout' %}">Logout</a>
+            {% else %}
+                <h1>Login</h1>
+                <a href="{% url 'login' %}">Login</a>
+            {% endif %}
+        </div>
+    </div>
 {% endblock %}
