--- a/viewdownloads/templates/viewrequests/requests.html
+++ b/viewdownloads/templates/viewrequests/requests.html
@@ -1,6 +1,8 @@
 {% extends 'common/master.html' %}
 {% block body %}
 <h1>View Download Attempts</h1>
+<a href="{% url 'view_downloads_csv' %}">Download as CSV</a>
+<a href="{% url 'view_all_downloads_csv' %}">Download all as CSV</a>
 <table>
     <tr>
         <th>Email</th>
