--- a/core/static/core/css/style.css
+++ b/core/static/core/css/style.css
@@ -11,7 +11,9 @@ h1, h2, h3, h4, h5, h6 {
     color: #333;
     font-size: 1.1em;
     line-height: 1.5em;
-    font-family: "Myriad Pro";
+    font-family: myriad-pro, sans-serif;
+    font-style: normal;
+    font-weight: 400;
 }
 .two-col-grid {
     display: grid;
@@ -42,7 +44,6 @@ input {
 }
 input[type=submit] {
   background-color: #FFF337;
-  color: blue;
 }
 input[type=submit]:hover {
   background-color: #61F900;
@@ -56,4 +57,11 @@ input[type=submit]:hover {
   left: -10000;
   width: 1px;
   height: 1px;
+}
+
+ul.semantic,
+ol.semantic {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
