--- a/download/templates/common/master.html
+++ b/download/templates/common/master.html
@@ -8,6 +8,7 @@
     {% if user.is_authenticated %}
       <link href="{% static 'core/css/logged-in.css' %}" rel="stylesheet">
     {% endif %}
+    {% block head %}{% endblock %}
   </head>
   <body>
     <div id="wrapper">
