--- a/download/static/download/css/download.css
+++ b/download/static/download/css/download.css
@@ -1,15 +1,15 @@
 body {
   background-color: rgba(0, 0, 0, 0.0);
+  height: 100%;
 }
 input[type=text] {
-  padding: 6px;
-  font-size: 12px;
-  width: 150px;
-  text-align: center;
+  font-size: 16px;
+  text-align: left;
 }
 #wrapper {
-  margin: auto;
-  width: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 #search-wrapper {
   position: relative;
@@ -30,9 +30,6 @@ input[type=text] {
 #addrlist li:hover,
 #addrlist li.fake-hover {
   background-color: lightgrey;
-}
-h1 {
-  color: white;
 }
 input {
   padding: 5px;
