--- a/download/static/download/css/download.css
+++ b/download/static/download/css/download.css
@@ -8,20 +8,21 @@ body {
   justify-content: center;
 }
 input[type=text] {
+  display: block;
   font-size: 16px;
   text-align: left;
   width: 100%;
   margin: auto;
 }
 #wrapper {
-  width: 90%;
-  margin: 0px;
+  width: 80%;
+  margin: auto;
   padding: 0px;
 }
 #search-wrapper {
   position: relative;
   display: inline-block;
-  font-size: 8px;
+  font-size: 12px;
   width: 100%;
 }
 #addrlist {
