--- a/download/templates/download/email/quote.html
+++ b/download/templates/download/email/quote.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+    <meta name="viewport" content="width=device-width" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>{{ subject }}</title>
+    </head>
     <body>
-        <p>Here is your free quote for {{ address }}.</p>
-        <p>This quote is valid for 30 days.</p>
+      <p>
+Thanks for using roofquotes.online, the stress free way to get roof pricing updates. Attached is a PDF document detailing your most recently priced proposal residing in our system. Save it to your computer, or better yet, print it for ease of reference. Click the link below from your desktop computer and access a reference page explaining some key areas of your proposal, view shingle brochures and download them if desired.
+      </p>
+      <p>
+When you wish to chat, send us an email or give us a call at 403 668-8681.
+      </p>
+      <p>
+Thanks again for checking in!
+<br><br>
+<a href="https://www.bahnprojects.com/roof-proposal-resources">REFERENCE PAGE</a>
+      </p>
+      <address>
+Your team at Bahn Projects
+<a href="tel:4036888681">(403) 668-8681</a>
+<a href="mailto:info@bahnprojects.com">info@bahnprojects.com</a>
+<a href="https://www.roofquote.online">www.roofquote.online</a>
+<a href="https://www.bahnprojects.com">www.bahnprojects.com</a>
+      </address>
         <div hidden>
             {{ address }}-{{ datetime }}
         </div>
     </body>
 </html>
+
+
+
+
