--- a/download/templates/download/email/quote.html
+++ b/download/templates/download/email/quote.html
@@ -7,10 +7,10 @@
     </head>
     <body>
       <p>
-Thanks for using roofquotes.online, the stress free way to get roof pricing updates. Attached is a PDF document detailing your most recently priced proposal residing in our system. Save it to your computer, or better yet, print it for ease of reference. Click the link below from your desktop computer and access a reference page explaining some key areas of your proposal, view shingle brochures and download them if desired.
+Thanks for using roofquote.online, the stress free way to get roof pricing updates. Attached is a PDF document detailing your most recently priced proposal residing in our system. Save it to your computer, or better yet, print it for ease of reference. Click the link below from your desktop computer and access a reference page explaining some key areas of your proposal, view shingle brochures and download them if desired.
       </p>
       <p>
-When you wish to chat, send us an email or give us a call at 403 668-8681.
+When you wish to chat, send us an email or give us a call at (403 ) 668-8681.
       </p>
       <p>
 Thanks again for checking in!
