--- a/download/static/download/css/download.css
+++ b/download/static/download/css/download.css
@@ -57,3 +57,12 @@ input[type=submit] {
 form {
   width: 100%;
 }
+
+input[type=submit] {
+  background-color: #FFF337;
+}
+input[type=submit]:hover {
+  background-color: #61F900;
+  opacity: 0.5;
+}
+
