--- a/download/templates/download/email/quote.html
+++ b/download/templates/download/email/quote.html
@@ -4,25 +4,31 @@
     <meta name="viewport" content="width=device-width" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>{{ subject }}</title>
+    <style>.bold { font-weight: bold; }</style>
     </head>
     <body>
       <p>
 Thanks for using roofquote.online, the stress free way to get roof pricing updates. Attached is a PDF document detailing your most recently priced proposal residing in our system. Save it to your computer, or better yet, print it for ease of reference. Click the link below from your desktop computer and access a reference page explaining some key areas of your proposal, view shingle brochures and download them if desired.
       </p>
       <p>
-When you wish to chat, send us an email or give us a call at (403 ) 668-8681.
+When you wish to chat, send us an email or give us a call at (403) 668-8681.
       </p>
       <p>
 Thanks again for checking in!
 <br><br>
-<a href="https://www.bahnprojects.com/roof-proposal-resources">REFERENCE PAGE</a>
+<a class="bold" href="https://www.bahnprojects.com/roof-proposal-resources">REFERENCE PAGE</a>
       </p>
       <address>
 Your team at Bahn Projects
+<br>
 <a href="tel:4036888681">(403) 668-8681</a>
+<br>
 <a href="mailto:info@bahnprojects.com">info@bahnprojects.com</a>
+<br>
 <a href="https://www.roofquote.online">www.roofquote.online</a>
+<br>
 <a href="https://www.bahnprojects.com">www.bahnprojects.com</a>
+<br>
       </address>
         <div hidden>
             {{ address }}-{{ datetime }}
