Change admin link to delete addresses

--- a/core/templates/core/links.html
+++ b/core/templates/core/links.html
@@ -18,9 +18,9 @@
                 <a href="{% url 'requests_view' %}">View Downloads</a>
             </div>
             <div>
-                <h1>Admin</h1>
-                <p>View and change settings. Enter at your own risk.</p>
-                <a href="/admin/">Administrator</a>
+                <h1>Delete Addresses</h1>
+		<p>Permenantly delete all inforamtion associated with an address.</p>
+                <a href="/admin/download/address/">Delete Addresses</a>
             </div>
         {% endif %}
     </div>
